update tests